Add much better logging and tolerance input parameter
